Added delete timesheet feature.  Recalc total hours on timesheet edit/delete

--- a/templates/timesheet/edit.html
+++ b/templates/timesheet/edit.html
@@ -32,6 +32,7 @@
         </div>
         <button type="submit" name="submit_button" class="btn btn-primary">Submit</button>
         <button type="submit" name="cancel_button" class="btn btn-secondary">Cancel</button>
+        <button type="submit" name="delete_button" class="btn btn-danger">Delete</button>
     </form>
 </div>
 {% endblock %}
