changed dev port.  Added email to invoice view

--- a/templates/invoice/view.html
+++ b/templates/invoice/view.html
@@ -47,6 +47,9 @@
                         <tr>
                             <td>{{ company.city }}, {{ company.state }} {{ company.zip }}</td>
                         </tr>
+                        <tr>
+                            <td>{{ company.email }}</td>
+                        </tr>
                     </table>
                 </td>
                 <td>
