Changed invoice header to show company name instead of attn

--- a/templates/invoice/view.html
+++ b/templates/invoice/view.html
@@ -39,7 +39,7 @@
                 <td style="width: 90%;">
                     <table class="pl-2">
                         <tr>
-                            <td>{{ company.attn }}</td>
+                            <td>{{ company.name }}</td>
                         </tr>
                         <tr>
                             <td>{{ company.address1 }}</td>
