--- a/templates/invoice/view.html
+++ b/templates/invoice/view.html
@@ -39,6 +39,9 @@
                 <td style="width: 90%;">
                     <table class="pl-2">
                         <tr>
+                            <td>{{ company.attn }}</td>
+                        </tr>                        
+                        <tr>
                             <td>{{ company.name }}</td>
                         </tr>
                         <tr>
