--- a/templates/invoice/create.html
+++ b/templates/invoice/create.html
@@ -11,8 +11,9 @@
         <div class="col-md-1">Client</div>
         <div class="col-md-6">
             <select class="form-control" id="client_id" name="client_id">
-                <option value="1">Market America</option>
-                <option value="2">Archway Services</option>
+                {% for client in clients %}
+                    <option value={{ client._id }}>{{ client.name }}</option>
+                {% endfor %}
             </select>
         </div>
     </div>
