--- a/templates/site/client_view.html
+++ b/templates/site/client_view.html
@@ -63,9 +63,13 @@
 
         <div class="row no-gutters mb-2">
             <div class="col-md-2">Email</div>
-            <div class="col-md-5">
+            <div class="col-md-4">
                 <input type="text" name="email" value="{{ form.email }}" style="width: 100%;">
             </div>
+            <div class="col-md-2">Invoice prefix</div>
+            <div class="col-md-2">
+                <input type="text" name="prefix" value="{{ form.prefix }}" style="width: 100%;">
+            </div>            
         </div>
 
         <div class="row no-gutters mt-2">
