Removed hard-coded pay rate as its now determined dynamically

--- a/templates/invoice/view.html
+++ b/templates/invoice/view.html
@@ -133,7 +133,7 @@
             </tr>
             <tr>
                 <td colspan="2" style="text-align: right; padding-right: 2em;">Rate</td>
-                <td style="text-align: right;">$50.00</td>
+                <td style="text-align: right;">{{ '$%5.2f'|format(invoice.rate) }}</td>
             </tr>        
             <tr>
                 <td colspan="2" style="text-align: right; padding-right: 2em;">Invoice Total</td>
