Changed 'item' to 'company' for clarity

--- a/templates/site/company_list.html
+++ b/templates/site/company_list.html
@@ -7,11 +7,11 @@
     </div>
 </div>
 
-{% for item in items %}
+{% for company in items %}
 <div class="row no-gutters">
-    <div class="col-md-1 col-offset-3">{{ item._id }}</div>
+    <div class="col-md-1 col-offset-3">{{ company._id }}</div>
     <div class="col-md-6">
-        <a href="{{ url_for('company_edit',company_id=item._id) }}">{{ item.name }}</a>
+        <a href="{{ url_for('company_edit',company_id=company._id) }}">{{ company.name }}</a>
     </div>
 </div>
 {% endfor %}
