--- a/templates/invoice/view.html
+++ b/templates/invoice/view.html
@@ -110,8 +110,13 @@
                     </tr>
                     <tr>
                         <td class="pr-3">Period</td>
+                        {% if invoice.close_date %}
+                            <td class="text-right pr-2">{{ invoice.date.strftime('%m/%d/%Y') }} 
+                                to {{ invoice.close_date.strftime('%m/%d/%Y') }}</td>
+                        {% else %}
                         <td class="text-right pr-2">{{ invoice.date.strftime('%m/%d/%Y') }} 
-                            to {{ invoice.close_date.strftime('%m/%d/%Y') }}</td>
+                            to ---                                
+                        {% endif %}
                     </tr>
                 </table>
             </td>
