--- a/templates/invoice/view.html
+++ b/templates/invoice/view.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=600, initial-scale=1">
@@ -22,6 +22,7 @@
 </head>
 
 <body>
+    
     <div {% if action=='view' %} style="width: 8.5in; margin-left: 4em;" {% endif %}>
         <div class="header">
             <table>
@@ -152,6 +153,7 @@
         </table>
         {% if action == 'view' %}
         <div class="mt-2 text-right">
+            {% include '_flashmessages.html' %}
             <a class="btn btn-primary" role="button" href="{{url_for('invoice_list')}}">Back to listing</a>
             <a class="btn btn-success" role="button" href="{{ url_for('invoice_view',invoice_id=invoice._id,action='print') }}">Print</a>
         </div>
