Got aggregation working for 'Reports'

--- a/templates/reports/results.html
+++ b/templates/reports/results.html
@@ -63,10 +63,10 @@
             Total
         </div>
         <div class="col-md-1 text-right font-weight-bold">
-            {{ '%5.2f'|format(totals.Hours) }}
+            {{ '%5.2f'|format(totals['Hours']) }}
         </div>
         <div class="col-md-1 text-right font-weight-bold">
-            {{ '%5.2f'|format(totals.Amount) }}
+            {{ '%5.2f'|format(totals['Amount']) }}
         </div>
     </div>
 </form>
