--- a/templates/reports/query.html
+++ b/templates/reports/query.html
@@ -11,7 +11,7 @@
 <form action="{{ url_for('get_report') }}" method='POST'>
     <div class="row no-gutters">
 
-        <div class="col-md-6">
+        <div class="col-md-5">
             <select class="form-control" id="client_id" name="client_id">
                 {% for client in clients %}
                     <option value={{ client._id }}>{{ client.name }}</option>
@@ -20,17 +20,31 @@
         </div>
 
         <div class="col-md-2">
-            Start date:
+            &nbsp; Start date:
             <input type="text" size="7" id="datepicker" name="start_date">
         </div>
         <div class="col-md-2">
             End date:
             <input type="text" size="7" id="datepicker2" name="end_date">
         </div>
+        <div class="col md-2">
+            <button type="submit">Search</button>
+        </div>
     </div>
-    <div class="row no-gutters">
-        <button type="submit">Search</button>
-    </div>
+
 </form>
+
+{% if error == True %}
+<div class="row mt-3">
+    <div class="col-md-11 h2 text-center text-danger">
+        Invalid date(s)
+    </div>
+</div>
+<div class="row mt-4">
+    <div class="col-md-11 text-center">
+        <a class="btn btn-danger" href="{{ url_for('get_report') }}">OK</a>
+    </div>
+</div>
+{% endif %}
 
 {% endblock %}
