Added timesheet view and print

--- a/templates/invoice/list.html
+++ b/templates/invoice/list.html
@@ -77,7 +77,7 @@
         {% endif %}
     </div>
     <div class="col-md-1 text-right">
-        <a href="{{ url_for('invoice_edit',invoice_id=item._id) }}">Edit</a>
+        <a href="{{ url_for('invoice_edit',invoice_id=item._id,action='view') }}">Edit</a>
     </div>
     <div class="col-md-1 text-right">
         <a href="{{ url_for('invoice_view',invoice_id=item._id,action='view') }}">View</a>
