--- a/templates/invoice/edit.html
+++ b/templates/invoice/edit.html
@@ -41,6 +41,7 @@
     <a class="btn btn-success mr-2" role="button" href="{{ url_for('invoice_close', invoice_id=invoice._id)}}">Close
         this invoice</a>
     {% elif invoice.status =='closed' %}
+        <a class="btn btn-info mr-2" role="button" href="{{ url_for('view_timesheet', invoice_id=invoice._id,action='view')}}">Print Timesheet</a>
         <a class="btn btn-info mr-2" role="button" href="{{ url_for('invoice_open', invoice_id=invoice._id)}}">Reopen</a>
         {% if invoice.sent == '' %}
         <form action="{{ url_for('invoice_post', invoice_id=invoice._id) }}" method="POST">
