--- a/templates/reports/execusys.html
+++ b/templates/reports/execusys.html
@@ -9,9 +9,8 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 
-<body>
-    <div class="container-sm border border-dark font-weight-bold p-5" 
-    style="font-family: serif; width: 8.5in; margin-left: 2em;">
+<body style="font-family: serif;">
+    <div class="container-sm border border-dark font-weight-bold p-5">
         <div class="row">
             <div class="col position-relative w-100 top-0 start-50 translate-middle">
                 <div class="h1 text-center">Execu-Sys, Ltd.</div>
