Added 'customer' element to contact.html

--- a/templates/site/contact.html
+++ b/templates/site/contact.html
@@ -102,6 +102,13 @@
         </div>
 
         <div class="row no-gutters mb-2">
+            <div class="col-md-2">Customer</div>
+            <div class="col-md-6">
+                <input type="text" name="customer" value="{{ client.customer }}" style="width: 50%;">
+            </div>
+        </div>
+
+        <div class="row no-gutters mb-2">
             <div class="col-md-2">Project</div>
             <div class="col-md-6">
                 <input type="text" name="project" value="{{ client.project }}" style="width: 50%;">
